--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,31 @@
 = Exceptional
 
-<b>This is currently under development is not currently complete.</b>
-
 Exceptional provides logging to your database for exceptions triggered by the users of 
 your Rails application. A generator is included that will give you a clean interface 
 to view and manage the exceptions.
+
+=== Dependencies
+
+If you wish to use the generator to build the exception viewing/manging interface, the following 
+dependencies are used:
+
+* will_paginate
+* jquery
+
+=== Installation
+
+1. Install the gem:
+     [sudo] gem install exceptional
+2. Add the exceptional gem dependency to your enviroment.rb:
+     config.gem "exceptional"
+3. Run the generator from the root of your Rails application:
+     script/generate exceptional
+4. Run the migration that was generated:
+     rake db:migrate
+5. Add the javascript and stylesheet includes in your layout:
+     <script type="text/javascript" src="/javascripts/exceptional.jquery.js"></script>
+     <link href="/stylesheets/exceptional.css" media="all" rel="stylesheet" type="text/css" />
+6. View the generated 'config/exceptional.yml' file and make sure the default options are correct.
 
 === License
 
